<resources>
    <string name="app_name">Printing Partner</string>
    <string name="title_activity_regular_main_screen">RegularMainScreenActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_my_orders">My Orders</string>
    <string name="menu_wallet">Wallet</string>
    <string name="menu_management">Management</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_send">Send</string>
    <string name="drawerOpen">drawerOpen</string>
    <string name="drawerClose">drawerClose</string>
    <string name="click"><![CDATA[clicked item number is>>>]]></string>
    <string name="title_activity_maps">Map</string>
    <string name="normal_map">Normal map</string>
    <string name="hybrid_map">Hybrid map</string>
    <string name="satellite_map">Satellite map</string>
    <string name="terrain_map">Terrain map</string>
    <string name="sign_in">Sign IN</string>
    <string name="create_account">Create Account</string>
    <string name="Password">Password</string>
    <string name="email_or_phone_num">Phone number</string>
    <string name="Proceed">Proceed</string>
    <string name="Please_Wait">Please Wait.</string>
    <string name="Are_you_a_lawyer">Are you a lawyer ?</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="sign_up">Sign Up</string>
    <string name="Forgot_password">Forgot Password</string>
    <string name="skip">Skip</string>
    <string name="DOB">Date of birth</string>
    <string name="Finish">Finish</string>
    <string name="Verify_your_identity">Verify your identity</string>
    <string name="Step_2_3">Step 2/3</string>
    <string name="Step_1_3">Step 1/3</string>
    <string name="Designation">Designation</string>
    <string name="City">City</string>
    <string name="First_name">First name</string>
    <string name="Last_name">Last Name</string>
    <string name="Gender">Gender</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Other">Other</string>
    <string name="Please_upload_your_Enrollment_Number">Please upload your Enrollment Number</string>
    <string name="State_bar_ID">State bar ID</string>
    <string name="Upload_ID_card">Upload ID card</string>
    <string name="Select_Language">Select Language</string>
    <string name="edit">edit</string>
    <string name="share">share</string>
    <string name="English">English</string>
    <string name="हिंदी">हिंदी</string>
    <string name="Next">Next</string>
    <string name="Get_Started">Get Started</string>
    <string name="Lawnics">Lawnics</string>
    <string name="Enter_OTP">Enter OTP</string>
    <string name="Verifying_your_number">Verifying your number</string>
    <string name="Please_enter_the_OTP_sent_to">Please enter the OTP sent to</string>
    <string name="Enter_a_wrong_number">Entered a wrong number?</string>
    <string name="Verify">Verify</string>
    <string name="Enrollment_number">Enrollment number</string>
    <string name="State">State</string>
    <string name="id_number">ID Number</string>
    <string name="Office_address">Office_address</string>
    <string name="E_mail_ID">E mail ID</string>
    <string name="Mobile_number">Mobile_number</string>
    <string name="Personal_information">Personal information</string>
    <string name="Contact">Contact</string>
    <string name="Done">Done</string>
    <string name="Passbook">Passbook</string>
    <string name="Add_credits">Add credits</string>
    <string name="Reedem_invite_code">Reedem invite code</string>
    <string name="Available_credits">Available credits</string>
    <string name="About">About</string>
    <string name="Term_and_Services">Term and Services</string>
    <string name="Privacy_Policy">Privacy Policy</string>
    <string name="Backup">Backup</string>
    <string name="Refer_and_Earn">Refer and Earn</string>
    <string name="FAQs">FAQs</string>
    <string name="Help">Help</string>
    <string name="Signout">Signout</string>
    <string name="Enter_your_views_about_the_app">Enter your views about the app</string>
    <string name="Submit">Submit</string>
    <string name="Name">Name</string>
    <string name="Filter">Filter</string>
    <string name="All">All</string>
    <string name="Paid">Paid</string>
    <string name="Received">Received</string>
    <string name="Added">Added</string>
    <string name="Apply">Apply</string>
    <string name="Tab_text_1" translatable="false">Previous Orders</string>
    <string name="Tab_text_2" translatable="false">Recent Orders</string>
    <string name="All_documents">All documents</string>
    <string name="ID_card">ID card</string>
    <string name="Create_new_folder">Create new folder</string>
    <string name="Import_from_gallery">Import from gallery</string>
    <string name="Type">Type</string>
    <string name="Gallery">Gallery</string>
    <string name="Batch">Batch</string>
    <string name="Settings">Settings</string>
    <string name="Single">Single</string>
    <string name="Share">Share</string>
    <string name="Rename">Rename</string>
    <string name="Delete">Delete</string>
    <string name="Print">Print</string>
    <string name="Retake">Retake</string>
    <string name="OCR">OCR</string>
    <string name="Page_name">Page name</string>
    <string name="All_pages">All pages</string>
    <string name="Selected_pages">Selected pages</string>
    <string name="Letter">Ltter</string>
    <string name="Legal">Legal</string>
    <string name="A4">A4</string>
    <string name="Double_side">Double side</string>
    <string name="One_side">One side</string>
    <string name="Portrait">Portrait</string>
    <string name="Landscape">Landscape</string>
    <string name="You_have_unsaved_changes_Are_you_sure_you_want_to_cancel">You have unsaved changes . Are you sure you want to cancel</string>
    <string name="Previous_orders">Previous orders</string>
    <string name="Recent_orders">Recent orders</string>
    <string name="Rotate">Rotate</string>
    <string name="Brightness">Brightness</string>
    <string name="Ok">ok</string>
    <string name="Original">Original</string>
    <string name="Lighten">Lighten</string>
    <string name="Delivered">Delivered</string>
    <string name="Credits">Credits</string>
    <string name="Search">Search</string>
    <string name="Image">Image</string>
    <string name="PDF">PDF</string>
    <string name="Choose_file_type">Choose file type</string>
    <string name="Black_and_white">Black and white</string>
    <string name="Color">Color</string>
    <string name="Phone_number">Phone number</string>
    <string name="Lawyer">Lawyer</string>
    <string name="Non_Lawyer">Non Lawyer</string>
    <string name="_50">50</string>
    <string name="Swipe_up_for_more">Swipe_up_for_more</string>
    <string name="Pick_from_shop">Pick from shop</string>
    <string name="Total_credits">Total credits</string>
    <string name="Pick_by">Pick by</string>
    <string name="Order_option">Order option</string>
    <string name="Please_select_your_profession">Please select your profession</string>
    <string name="Print_Yourself">Print Yourself</string>
    <string name="Order_Print">Order Print</string>
    <string name="Recharge_now">Recharge now</string>
    <string name="media_picker_slash">/</string>
    <string name="Restore">Restore</string>
    <string name="copy">Copy</string>
    <string name="move">Move</string>
    <string name="move_here">Move Here</string>
    <string name="copy_here">Copy Here</string>
    <string name="title_activity_order">OrderActivity</string>
    <string name="title_management_activity">Management</string>
    <string name="home_second">Home Second</string>
</resources>